--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.10",
+    "clsx": "^2.1.0",
     "contentlayer": "latest",
     "date-fns": "2.30.0",
     "next": "13.4.7",
