--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "13.4.7",
     "next-contentlayer": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "@types/react": "18.2.14",
